--- a/05-PricesSpaceTime.Rmd
+++ b/05-PricesSpaceTime.Rmd
@@ -45,9 +45,10 @@ http://www.cornandsoybeandigest.com/carrying-charges-part-2).
 
 ## An Increasing Forward Curve
 
-Figure 1 illustrates the forward curve on September 26, 2016. 
+Figure 1
 
-![Figure 1. Forward Curve on 9-26-2016](Excel-files/PricesSpaceTime/forward-curves_files/image001.png)
+
+![](assets/PricesSpaceTime-increasing-9-26-2016.png)
 
 The reason that the forward curve represents return to storage is that it shows how much extra money can be made by storing to a later date, rather than selling in the cash 'spot' market today. December corn is worth 330 cents per bushel and March corn is worth 340 cents per bushel, then you can make an extra 10 cents per bushel by selling the March futures and selling into the cash market later.  
 
@@ -55,9 +56,9 @@ When stocks are plentiful the market offers a premium to those who are willing t
 
 This kind of market environment is sometimes called a *carry market* or *contango market*, or sometimes it is said that the market is *in full carry*. This means that the market is offering returns to storage that covers the cost to rent warehouse space, insure, and finance storing grain in until a later date. The year of 2016 was certainly a full carry market. Record production and a high forecast of ending stocks make this the classic market environment where returns to storage would be positive. 
 
-As another example, the forward curve is shown for 2015 in figure 2. 
+As another example, the forward curve is shown for 2015 in figure 2.
 
-![Figure 2. Forward Curve on 9-25-2015](Excel-files/PricesSpaceTime/forward-curves_files/image005.png)
+![](assets/PricesSpaceTime-increasing-9-25-2015.png)
 
 
 This example illustrates a phenomenon that often occurs. Here we saw that the forward curve is upward sloped until September. Then it flattens and returns to storage go away. This makes sense because in September we begin to see some of the next year's crop come onto the market. So in 2015, the market was basically asking farmers to keep storing through July, but no longer. Anyone planning to hold grain from July to September and beyond could expect to lose as much as 4 cents per month. 
@@ -70,8 +71,7 @@ Next we will consider a year that was characterized by a decreasing forward curv
 
 We will look at the forward curve and return to storage in steps for 2012. On 4-13-2-12 the forward curve are as shown in figure 3. This is in the spring, before the drought has happened. 
 
-![Figure 3. Forward Curve on 4-13-2012](Excel-files/PricesSpaceTime/forward-curves_files/image009.png)
-
+![](assets/PricesSpaceTime-decreasing-4-13-2012.png)
 
 In this case, supplies were already tight going into 2012. The forward curve is downward sloped, sometimes called *inverted* or *backwardated* market. So returns to storage are negative, as shown in Figure 6 through the summer of 2012, even before we had the drought realized. However, it is apparent from the forward curve that as of 4-13-2012, the market 'thought' that the 2012 harvest would be good, because price levels drop substantially in the September and December contract, and the return to storage between December 2012 and March 2013 is positive on 4-13-2012. 
 
@@ -79,13 +79,11 @@ Next, lets look at the forward curve on 8-01-2012. By August 1, it is clear that
 
 Now, the forward curve is downward sloped for the entire marketing year until the next harvest, in 2013, is expected. On 4-13-2012, the market was offering about 5 cents per month to store from December 2012 to March 2013, by 8-01-2012, the market was offering -1 cent for storage during the same time period.
 
-![Figure 4. Forward Curve on 8-01-2012](Excel-files/PricesSpaceTime/forward-curves_files/image013.png)
-
+![](assets/PricesSpaceTime-flat-8-01-2012.png)
 
 Now, just to illustrate how the forward curve changed between August and December 2012, the time in which harvest occurred and we learned exactly how bad yields turned out to be, we show the forward curve on 12-03-2012 in figure 5. 
 
-
-![Figure 5. Forward Curve on 12-03-2012](Excel-files/PricesSpaceTime/forward-curves_files/image017.png)
+![](assets/PricesSpaceTime-flat-12-03-2012.png) 
 
 ## Forward Curve Cases with Hypothetical Data
 
@@ -93,43 +91,8 @@ When prices move up or down, the front end of the forward curve generally is mor
 
 **Prices Increasing**
 
+![](assets/PricesSpaceTime-pricesincreasing-hyp.png)
 
-
-```{r, echo = FALSE, message = FALSE, warning=FALSE}
-library(tidyr)
-library(ggplot2)
-
-xaxis <- c('Dec', 'March', 'May', 'July', 'Sept')
-day1 <- c('day 1', 'day 1', 'day 1', 'day 1', 'day 1')
-day2 <- c('day 2', 'day 2', 'day 2', 'day 2', 'day 2')
-day3 <- c('day 3', 'day 3', 'day 3', 'day 3', 'day 3')
-day4 <- c('day 4', 'day 4', 'day 4', 'day 4', 'day 4')
-day1p <- as.numeric(c(350, 360, 369, 375, 378))
-day2p <- as.numeric(c(355, 364, 372, 377, 379))
-day3p <- as.numeric(c(360, 367, 374, 378, 380))
-day4p <- as.numeric(c(385, 383, 382, 381, 381))
-
-day1 <- cbind(xaxis, day1, day1p)
-day2 <- cbind(xaxis, day2, day2p)
-day3 <- cbind(xaxis, day3, day3p)
-day4 <- cbind(xaxis, day4, day4p)
-df <- rbind(day1, day2, day3, day4)
-df <- as.data.frame(df)
-colnames(df) <- c('xaxis', 'day', 'price')
-# df$xaxis <- factor(df$xaxis, levels = df$xaxis[order(df$price)])
-df$xaxis <- factor(df$xaxis, levels = unique(df$xaxis[order(df$price)]))
-
-df$price <- as.numeric(as.character(df$price))
-g <- ggplot(df, aes(xaxis, price, colour= day)) + ylim(300,425) + theme_bw() +
-        geom_point() + geom_line(aes(group = day)) +
-        scale_color_manual(values = c("darkblue", "darkblue", "darkblue", "darkblue")) +
-        labs(x = "", y = "Price cents per bushel") + 
-        geom_text(aes(label= ifelse(xaxis == "Dec", as.character(day), '')),hjust=1.5, vjust=0) + 
-        theme(legend.position = "none")
-       
-g
-```
-   
 Figure 6. Forward Curve with Prices Increasing, Contango to backwardation
 
 On day 1, the market is clearly in contango, as the forward curve is upward sloped. As time moves from day 1 through day 4 prices are rising each day, with the front end of the forward curve exhibiting the largest changes each day. On day 4, prices have risen enough that the market is now in backwardation with the front month higher than the first deferred. 
@@ -137,42 +100,8 @@ On day 1, the market is clearly in contango, as the forward curve is upward slop
 
 **Prices Decreasing**
 
+![](assets/PricesSpaceTime-pricesdecreasing-hyp.png)
 
-
-```{r, echo = FALSE, message = FALSE, warning=FALSE}
-library(tidyr)
-library(ggplot2)
-
-xaxis <- c('Dec', 'March', 'May', 'July', 'Sept')
-day1 <- c('day 1', 'day  1', 'day 1', 'day 1', 'day 1')
-day2 <- c('day 2', 'day 2', 'day 2', 'day 2', 'day 2')
-day3 <- c('day 3', 'day 3', 'day 3', 'day 3', 'day 3')
-day4 <- c('day 4', 'day 4', 'day 4', 'day 4', 'day 4')
-day1p <- as.numeric(c(350, 360, 369, 375, 378))
-day2p <- as.numeric(c(342, 354, 366, 372, 377))
-day3p <- as.numeric(c(332, 346, 360, 368, 374))
-day4p <- as.numeric(c(327, 341, 355, 363, 369))
-
-day1 <- cbind(xaxis, day1, day1p)
-day2 <- cbind(xaxis, day2, day2p)
-day3 <- cbind(xaxis, day3, day3p)
-day4 <- cbind(xaxis, day4, day4p)
-df <- rbind(day1, day2, day3, day4)
-df <- as.data.frame(df)
-colnames(df) <- c('xaxis', 'day', 'price')
-# df$xaxis <- factor(df$xaxis, levels = df$xaxis[order(df$price)])
-df$xaxis <- factor(df$xaxis, levels = unique(df$xaxis[order(df$price)]))
-df$price <- as.numeric(as.character(df$price))
-g <- ggplot(df, aes(xaxis, price, colour= day)) + ylim(300,425) + theme_bw() +
-        geom_point() + geom_line(aes(group = day)) +
-        scale_color_manual(values = c("darkblue", "darkblue", "darkblue", "darkblue", "darkblue")) +
-        labs(x = "", y = "Price cents per bushel") + 
-        geom_text(aes(label= ifelse(xaxis == "Dec", as.character(day), '')),hjust=1.5, vjust=0) + 
-        theme(legend.position = "none")
-       
-g
-```
-   
 Figure 7. Forward Curve with Prices Decreasing 
 
 On day 1 the market is in contango in this example as well. As time progresses from day 1 to day 4, prices are falling. From day 1 to day 3 the forward curve is getting steeper because price declines in Dec are larger than the price declines in March. In turn, the price declines in March are larger than the price declines in May, and do on. This indicates that from day 1 to day 3, the market is not yet at full carry; as prices are declining, the returns to storage keep increasing (reflected by the steeper forward curve). From day 3 to day 4, however, we can see that the market is at full carry because the price decline is constant all the way up the forward curve. Even though prices continue to fall, the market is already offering enough incentive to store to cover storage costs, so the price differences between contracts cannot widen any further. 
